bin_PROGRAMS=cngpijmnt

cngpijmnt_SOURCES=\
	main.c getipc.c bjutil.c \
	bjutil.h

#cngpijmnt_LDADD= -lpopt -lcups -lparamlist 
cngpijmnt_LDADD= -lpopt -lcups
#cngpij_LDFLAGS = -L../../libs/paramlist
cngpijmnt_LDFLAGS = -L../../libs/paramlist

#AM_CFLAGS= -O2 -Wall -I../include/cncl -I../include/misc -I../../libs/paramlist
AM_CFLAGS= -O2 -Wall -I../include/misc

